# nervlynx

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml  release.yml  sbom.yml  sync-labels.yml
benchmarks/: README.md  benchmark_runtime.py  check_deterministic_replay.py
benchmarks/baselines/: README.md  reference_runtime_v0.2.0.json
configs/: route_loop.yaml  services.yaml
cpp_core/: CMakeLists.txt
cpp_core/include/nervlynx/: contracts.hpp  generated_contracts.hpp  observability.hpp  recorder.hpp  runtime.hpp  watchdog.hpp
cpp_core/src/: smoke_surveillance.cpp
deploy/: README.md
deploy/config/: graph_surveillance.yaml  robot_profile.yaml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/scripts/: install_edge.sh  sync_config.py
deploy/systemd/: nervlynx-surveillance.service
docs/: API_STABILITY.md  ARCHITECTURE.md  COMMUNITY.md  DEPRECATION_POLICY.md  DEVELOPMENT.md  GETTING_STARTED.md  PLUGIN_AUTHORING.md  README.md  RELEASE_PROCESS.md  SUPPORT_MATRIX.md  THREAT_MODEL.md
examples/robot_packs/: README.md  delivery.yaml  reference_actuator_mock.yaml  reference_camera_ingest.yaml  reference_planner_stub.yaml  surveillance.yaml  warehouse.yaml
robot_core/: __init__.py  builtin_plugins.py  chaos.py  checkpoint.py  cli.py  codegen.py  contracts.py  dashboard.py  distributed.py  examples.py  generated_contracts.py  graph.py  metrics.py  nervlynx_cli.py  observability.py  plugins.py  recorder.py  reference_plugins.py  runtime.py  security.py  smoke_matrix.py  smoke_surveillance.py  stable_api.py  supervisor.py  transport.py  watchdog.py
schemas/: README.md  nervlynx_contracts.yaml  shuttle.capnp
shuttle/: README.md  __init__.py  broker.py  bus.py  cli.py  config.py  messages.py  processes.py  route.py  safety.py  schema.py  sensors.py  timeutil.py
tests/: test_bytecompile.py  test_cli_graph_run_core.py  test_cli_version.py  test_codegen.py  test_contracts_observability.py  test_example_graph_packs.py  test_graph_validation.py  test_nervlynx_cli_version.py  test_nervlynx_init.py  test_plugins.py  test_reference_plugins.py  test_robot_core_recorder.py  test_robot_core_runtime.py  test_route.py  test_runtime_advanced.py  test_safety.py  test_security_checkpoint_dashboard_chaos_distributed.py  test_smoke_matrix.py  test_smoke_surveillance.py  test_stable_api_surface.py  test_transport_supervisor_metrics_graph.py
tests/fixtures/graph/: invalid_input_topics.yaml  invalid_missing_nodes.yaml
tests/fixtures/replay/: expected_trace.jsonl  seed_trace.jsonl
