[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nervlynx"
version = "0.2.0"
description = "Reusable robotics runtime core with a shuttle reference stack"
requires-python = ">=3.10"
dependencies = [
  "pycapnp>=2.0.0",
  "pyzmq>=26.0.0",
  "PyYAML>=6.0.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
shuttle-stack = "shuttle.cli:app"
robot-core = "robot_core.cli:app"
nervlynx = "robot_core.nervlynx_cli:app"

[project.entry-points."nervlynx.sensors"]
synthetic_surveillance_sensor = "robot_core.builtin_plugins:SyntheticSensorPlugin"
camera_ingest_sensor = "robot_core.reference_plugins:CameraIngestSensorPlugin"

[project.entry-points."nervlynx.nodes"]
perception_node = "robot_core.builtin_plugins:PerceptionNodePlugin"
planner_node = "robot_core.builtin_plugins:PlannerNodePlugin"
planner_stub_node = "robot_core.reference_plugins:PlannerStubNodePlugin"
actuator_mock_node = "robot_core.reference_plugins:ActuatorMockNodePlugin"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["shuttle*", "robot_core*"]
